--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A GraphQL based URL shortener API made with typescript and express",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsnd --respawn src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/umtdemr/Url-Shortener-GraphQL-API/issues"
   },
-  "homepage": "https://github.com/umtdemr/Url-Shortener-GraphQL-API#readme"
+  "homepage": "https://github.com/umtdemr/Url-Shortener-GraphQL-API#readme",
+  "devDependencies": {
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
+  }
 }
