--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
   },
   "homepage": "https://github.com/umtdemr/Url-Shortener-GraphQL-API#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "express": "^4.18.1"
   }
 }
