--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "apollo-server-express": "^3.9.0",
+    "express": "^4.18.1",
+    "graphql": "^16.5.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
