--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.9.0",
+    "class-validator": "^0.13.2",
     "express": "^4.18.1",
-    "graphql": "^16.5.0",
-    "reflect-metadata": "^0.1.13"
+    "graphql": "15.8",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1"
   }
 }
