--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "apollo-server-core": "^3.9.0",
     "apollo-server-express": "^3.9.0",
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
