--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@types/shortid": "^0.0.29",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
@@ -34,6 +35,7 @@
     "express": "^4.18.1",
     "graphql": "15.8",
     "reflect-metadata": "^0.1.13",
+    "shortid": "^2.2.16",
     "type-graphql": "^1.1.1"
   }
 }
