--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
     "graphql": "15.8",
+    "prisma": "^3.15.2",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16",
     "type-graphql": "^1.1.1"
