--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "@prisma/client": "^3.15.2",
     "apollo-server-core": "^3.9.0",
     "apollo-server-express": "^3.9.0",
     "class-validator": "^0.13.2",
