--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prisma": "^3.15.2",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16",
+    "ts-node": "^10.8.1",
     "type-graphql": "^1.1.1"
   }
 }
