--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.13.2",
     "express": "^4.18.1",
     "graphql": "15.8",
+    "graphql-subscriptions": "^2.0.0",
     "prisma": "^3.15.2",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16",
