--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "@types/shortid": "^0.0.29",
+    "@types/ws": "^8.5.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   },
@@ -36,11 +37,13 @@
     "express": "^4.18.1",
     "graphql": "15.8",
     "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.9.0",
     "prisma": "^3.15.2",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.16",
     "ts-node": "^10.8.1",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "ws": "^8.8.0"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
